# HW-SW

./: README.md  Unavngivet diagram.drawio  alarnsystem.cpp  stateMachines_alarmSystem.drawio  systemArchitecture.drawio
AlarmSystem/: AlarmSystem.cpp  AlarmSystem.h  CMakeLists.txt  Camera.cpp  Camera.h  InputData.cpp  InputData.h  IntrusionDetector.cpp  IntrusionDetector.h  LCG.cpp  LCG.h  PinCode.cpp  Sensors.cpp  Sensors.h  SharedData.cpp  SharedData.h  StateManagement.cpp  camera.h  data-management-module.cpp  datamanagement.cpp  main.cpp  sensors.h
AlarmSystem/Objects/: sensors.h
AlarmSystem/headerfiles/: Camera.h  IntrusionDetector.h  LCG.h  LogIn.h  PinCode.h  Sensors.h  SharedData.h  StateManagement.h
AlarmSystem/sourcefiles/: CMakeLists.txt  Camera.cpp  IntrusionDetector.cpp  LCG.cpp  LogIn.cpp  PinCode.cpp  Sensors.cpp  SharedData.cpp  StateManagement.cpp
Diagrams/: stateMachines_alarmSystem.drawio
Other/: ContextDiagram.drawio  class.drawio  classDiagram.drawio
Other/Diagrams/: Architecture.drawio  Container.drawio  Sequence Diagram.drawio
